src/test/k8s/configserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configserver
  labels:
    app: configserver
spec:
  replicas: 1
  selector:
    matchLabels:
      configserver: configserver
  template:
    metadata:
      labels:
        configserver: configserver
    spec:
      containers:
        - image: springcloud/configserver
          name: configserver
          ports:
            - containerPort: 8888
              name: configserver
---

apiVersion: v1
kind: Service
metadata:
  name: configserver
  labels:
    configserver: configserver
spec:
  ports:
    - port: 80
      targetPort: 8888
  selector:
    configserver: configserver

---

# Middleware
# Strip prefix /overview
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: mw-admin1
  namespace: default
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - "/configserver"
---

apiVersion:  networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1
  annotations:
    kubernetes.io/ingress.class: "traefik"
    #traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/router.middlewares: default-mw-admin1@kubernetescrd
    #traefik.ingress.kubernetes.io/rule-type: PathPrefixStrip
  
    
spec:
  #ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /configserver
        pathType: Prefix
        backend:
          service:
            name: configserver
            port:
              number: 80
